@@ -1,5 +1,6 @@
 v4.2 (25 Mar 2014)
 * Fixed Next.Generic error in accuracy.gts.
+* Adjust weights = sd using denomintor N.
 
 v4.1 (3 Mar 2014)
 * Set the default parallel processes to 2.
